--- a/theme.css
+++ b/theme.css
@@ -1,10 +1,7 @@
-@define-color bar-bg rgba(0, 0, 0, 0);
-
-@define-color main-bg #475437;
-@define-color main-fg #b5cc97;
-
-@define-color wb-act-bg #668f31;
-@define-color wb-act-fg #c2d89c;
-
-@define-color wb-hvr-bg #c6eb6f;
-@define-color wb-hvr-fg #c0fc47;
+@define-color bar-bg rgba(29,32,33,0);
+@define-color main-bg rgba(29,32,33,0.8);
+@define-color main-fg rgba(214,214,214,0.8);
+@define-color wb-act-bg rgba(79,72,68,0.4);
+@define-color wb-act-fg rgba(252,252,252,1);
+@define-color wb-hvr-bg rgba(61,61,61,0.4);
+@define-color wb-hvr-fg rgba(214,214,214,0.8);
