--- a/theme.css
+++ b/theme.css
@@ -1,10 +1,7 @@
-@define-color bar-bg rgba(0, 0, 0, 0);
-
-@define-color main-bg #475437;
-@define-color main-fg #b5cc97;
-
-@define-color wb-act-bg #668f31;
-@define-color wb-act-fg #c2d89c;
-
-@define-color wb-hvr-bg #c6eb6f;
-@define-color wb-hvr-fg #c0fc47;
+@define-color bar-bg rgba(44,43,43,0);
+@define-color main-bg rgba(44,43,43,0.8);
+@define-color main-fg rgba(240,170,170,0.8);
+@define-color wb-act-bg rgba(205,161,75,0.4);
+@define-color wb-act-fg rgba(255,238,204,1);
+@define-color wb-hvr-bg rgba(125,108,75,0.4);
+@define-color wb-hvr-fg rgba(240,227,170,0.8);
